Sat Jul 23 12:12:25 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (rb_check_id): conversion condition was inverse.
	  [Bug #5084]

Fri Jul 22 21:46:54 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* vm_insnhelper.c (vm_call_cfunc): added volatile for a workaround
	  of cfp consistency error problem on OS X 10.7 (Lion). It's
	  suspected llvm optimization bug.
	  [Bug #5074] [ruby-dev:44185]

Fri Jul 22 21:18:20 2011  NARUSE, Yui  <naruse@ruby-lang.org>

	* lib/uri/generic.rb (WFKV_): unroll the loop of regexp.

	* lib/uri/generic.rb (URI.decode_www_form_component): ditto.

Fri Jul 22 21:06:39 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* object.c (rb_mod_{const,cvar}_defined, rb_obj_ivar_defined):
	  avoid inadvertent symbol creation in reflection methods.  based
	  on a patch by Jeremy Evans at [ruby-core:38367].  [Feature #5072]

	* vm_method.c (rb_mod_method_defined)
	  (rb_mod_{public,private,protected}_method_defined)
	  (obj_respond_to): ditto.

	* parse.y (rb_check_id): new function returns already interned ID
	  or 0.

Fri Jul 22 20:44:49 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (rb_is_global_id, rb_is_attrset_id): add missing
	  predicates.

Fri Jul 22 20:24:38 2011  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>

	* test/ruby/test_object.rb (TestObject#test_respond_to_missing):
	  2nd argument of respond_to_missing? is not optional.

Fri Jul 22 19:05:47 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (rb_enc_symname2_p): get rid of potential out-of-bound
	  access.

Fri Jul 22 13:55:59 2011  Eric Hodel  <drbrain@segment7.net>

	* lib/net/http.rb:  Net::HTTP#finish is used to manually close
	  connections.  [Ruby 1.9 - Bug #5045]

Fri Jul 22 13:51:29 2011  Eric Hodel  <drbrain@segment7.net>

	* ext/readline/readline.c:  Add examples for Readline.completion_proc=.
	  [Ruby 1.9 - Bug #5057]

Fri Jul 22 13:03:12 2011  Martin Bosslet  <Martin.Bosslet@googlemail.com>
